new code in about section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,27 @@
             </div>
 
         </section>
+
+        <!-- about section -->
+         <section id="about-container">
+            <div class="about-img">
+                <img width="100%" src="assets/foods.png" alt="">
+            </div>
+            <div class="about-info">
+                <div class="about-data">
+                    <h1>We always make sure to provide you with good food</h1>
+                    <p class="about-p">Don’t miss a thing! Subscribe to our newsletter</p>
+                </div>
+                <div class="contact"  >
+                    <hr>
+                    <h3>Follow Us On</h3>
+                    <hr>
+                </div>
+                <div>
+
+                </div>
+            </div>
+         </section>
     </main>
 </body>
 </html>
